# libdres-ohm

./: .gitignore  COPYING  Makefile  Makefile.am  Makefile.orig  acinclude.m4  action.c  builtin.c  configure.ac  configure.in  dres-test.c  dres.c  dres.h  lexer.l  parser.y  target.c  variables.c  variables.h
debian/: changelog  control  control.in  libdres-dev.install  libdres-utils.install  libdres.install  libdres0.install  ohm-plugin-resolver.install  rules
doc/: Doxyfile  Makefile.am  README  TODO  resolver-overview.txt
doc/lyx/: dres_library.lyx  prefix
doc/ohm-plugin/lyx/: dres_plugin.lyx  prefix
examples/: dependencies.mk  test.in
fedora/: Makefile  dres.spec.in  libdres.spec.in
include/: Makefile.am
include/dres/: compiler.h  config.h.in  dres.h  mm.h  variables.h  vm.h
meego/: Makefile  libdres.spec.in
ohm-plugin/: Makefile.am  console.c  console.h  dres.ini  factstore.c  factstore.h  resolver.c
prolog/: audio.pl  devconfig.pl  hwconfig.pl  interface.pl  policy.pl  profile.pl
rpm/: libdres.changes  libdres.spec  libdres.yaml
src/: Makefile.am  action.c  ast.c  builtin.c  compiler.c  dres-compiler.c  dres-debug.h  dres.c  dresc.c  dresvar.c  factvar.c  graph.c  lexer.l  libdres.pc.in  literal.c  parser-test.c  parser-types.h  parser.y  prereq.c  scope.c  target.c  variables.c  vm-TODO  vm-debug.c  vm-global.c  vm-instr.c  vm-local.c  vm-log.c  vm-method.c  vm-stack.c  vm-test.c  vm.c  vm.h
test/: Makefile.am  dres-test.c  policy.dres  test.c  test.dres  tx-test.c
test/prolog/: audio.pl  devconfig.pl  hwconfig.pl  interface.pl  precompile.pl  profile.pl  test.pl
tests/: Makefile.am  dres-test.c  fs-test.c  ruleset.dres
